--- a/src/sass/formhub/_radiocheck.scss
+++ b/src/sass/formhub/_radiocheck.scss
@@ -4,7 +4,6 @@
         $line-h: 20px;
         line-height: $line-h;
         outline: 0;
-        padding-left: 5px;
         :not(img):not(video):not(audio).active {
             margin-left: 0;
         }
@@ -35,6 +34,22 @@
             }
         }
     }
+    // where regular labels are shown
+    &:not(.or-appearance-likert):not(.or-appearance-label):not(.or-appearance-list-nolabel) {
+        .option-wrapper > label {
+            padding-left: 35px;
+            .option-label::before {
+                margin-left: -30px;
+            }
+        }
+    }
+}
+
+// tweak for touchscreens
+.touch .question:not(.or-appearance-compact):not(.or-appearance-quickcompact):not(.or-appearance-label):not(.or-appearance-list-nolabel):not(.or-appearance-likert) {
+    .option-wrapper > label {
+        padding-left: 40px;
+    }
 }
 
 // tables
@@ -43,6 +58,7 @@
         margin-left: -10px;
     }
 }
+
 .question.or-appearance-list-nolabel label {
     .option-label.active {
         visibility: visible;
